apps/base/hindsight/service-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: hindsight-dashboard
  namespace: hindsight
  labels:
    app: hindsight-dashboard
    app.kubernetes.io/name: hindsight-dashboard
  annotations:
    metallb.universe.tf/allow-shared-ip: tazlab-internal-dashboard
    metallb.universe.tf/ip-allocated-from-pool: default-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.1.240
spec:
  type: LoadBalancer
  selector:
    app: hindsight-dashboard
  ports:
    - name: dashboard
      port: 8007
      targetPort: 9999
